[package]
name = "tote"
version = "0.2.0"
authors = ["Matthew Wood <mat@thepacketgeek.com>"]
edition = "2018"
description = "A lightweight data cache for CLI libraries"
license = "MIT"
homepage = "https://github.com/thepacketgeek/tote"
repository = "https://github.com/thepacketgeek/tote"
readme = "README.md"

[features]
# Synchronous (threaded) `Fetch` trait used to retrieve data in the case
# of missing or expired cache data
default = []

# Asynchronous (tokio) `AsyncFetch` trait used to retrieve data in the case
# of missing or expired cache data
# Adds dependency for `async-trait` and `tokio` (for testing)
async = ["async-trait"]

[dependencies]
async-trait = { version = "0.1", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
dirs = "3.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
tempfile = "3.0"
